# nix-remote-rust

./: .gitignore  Cargo.toml  README.md  flake.nix  nix-remote-rust.sh  notes.md  remote-build.sh  rust-nix-bazel.sh
.github/workflows/: ci.yml
examples/proxy/: main.rs  proxy.rs
nix-remote/: Cargo.toml
nix-remote-simple-proxy/: Cargo.toml
nix-remote-simple-proxy/src/: main.rs
nix-remote/src/: common.rs  framed_data.rs  lib.rs  nar.rs  nix_client.rs  nix_daemon_proxy.rs  serialize.rs  stderr.rs  worker_op.rs
nix-remote/tests/: main.rs
src/: framed_data.rs  framed_source.rs  lib.rs  main.rs  nar.rs  printing_read.rs  serialize.rs  stderr.rs  worker_op.rs
tagged-serde/: Cargo.toml  README.md
tagged-serde-test/: Cargo.toml
tagged-serde-test/src/: main.rs
tagged-serde/src/: lib.rs
