[workspace]
resolver = "2"

members = [
    "nix-remote",
    "nix-remote-simple-proxy",
    "tagged-serde",
    "tagged-serde-test"
]

[workspace.dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
serde = { version = "1.0.151", features = ["derive", "serde_derive"] }
serde_bytes = "0.11.8"
serde_json = "1.0.96"
thiserror = "1.0.38"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full", "extra-traits"] }

nix-remote = { path = "./nix-remote" }
tagged-serde = { version = "0.1.0", path = "./tagged-serde" }

arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.3.1"
expect-test = "1.5.0"