[package]
name = "nix-remote"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tweag/nix-remote-rust"

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
serde = { version = "1.0.151", features = ["serde_derive"] }
serde_bytes = "0.11.8"
tagged-serde = { version = "0.1.0", path = "../tagged-serde" }
thiserror = "1.0.38"

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.3.1"
expect-test = "1.5.0"