[package]
name = "tagged-serde"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tweag/nix-remote-rust"
license = "MIT"
description = "A procedural macro for serde enums with integer tags"

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
